# cog-models

./: .gitignore  README.md
ibm-granite/fp8/: .gitignore  granite-4_0-h-small-fp8.py
ibm-granite/granite-3.3-8b-instruct/: .dockerignore  chat_template.jinja  cog.yaml  predict.py  predictor_config.json  pyproject.toml  requirements.txt
ibm-granite/granite-4.0-h-small/: cog.yaml  predict.py  predictor_config.json  pyproject.toml  requirements.txt
ibm-granite/granite-4.0-h-small-fp8/: .dockerignore  cog.yaml  pyproject.toml  requirements.txt
ibm-granite/granite-4.0-tiny-preview/: .dockerignore  .gitignore  cog.yaml  predict.py  predictor_config.json  pyproject.toml  requirements.txt
ibm-granite/granite-4.1-8b/: .dockerignore  cog.yaml  predict.py  predictor_config.json  pyproject.toml  requirements.txt
ibm-granite/granite-embedding-278m-multilingual/: .dockerignore  cog.yaml  predict.py  predictor_config.json  pyproject.toml  requirements.txt
ibm-granite/granite-embedding-small-english-r2/: cog.yaml  predict.py  predictor_config.json  pyproject.toml  requirements.txt
ibm-granite/granite-embedding-small-english-r2/tests/: texts.json  texts_normalize.json
ibm-granite/granite-embedding-small-english-r2/weights/: .gitignore
ibm-granite/granite-speech-3.3-8b/: cog.yaml  predict.py  (+3 more)
ibm-granite/granite-speech-4.1-2b/: .dockerignore  cog.yaml  predict.py  predictor_config.json  pyproject.toml  requirements.txt
ibm-granite/granite-speech-4.1-2b/tests/: chat_audio_url.json  chat_audio_url_stream.json  chat_input_audio.json  prompt_audio_url.json  prompt_audio_url_stream.json
ibm-granite/granite-vision-4.1-4b/: .gitignore  cog.yaml  predict.py  predictor_config.json  pyproject.toml  requirements.txt
ibm-granite/granite-vision-4.1-4b/tests/: chat_images_chart2csv.json  chat_images_tables_json.json  prompt_images_chart2summary.json  prompt_noimage.json
(+45 files in other folders)
