# SPDX-License-Identifier: Apache-2.0

[project]
name = "granite-embedding-small-english-r2"
version = "1.0.0"
description = "Dependencies for predict.py"
dependencies = [
    "torch==2.11.0",
    "transformers==5.5.4",
    "accelerate==1.13.0",
    "pydantic==2.10.6",
]
requires-python = "~= 3.12.0"

# This needs to match the CUDA version in cog.yaml
[tool.uv.pip]
torch-backend = "cu128"
