# SPDX-License-Identifier: Apache-2.0

[project]
name = "granite-speech-4.1-2b"
version = "1.0.0"
description = "Dependencies for predict.py"
dependencies = [
    "vllm[audio]==0.19.0"
]
requires-python = "~= 3.12.0"

# This needs to match the CUDA version in cog.yaml
[tool.uv.pip]
torch-backend = "cu128"
