# SPDX-License-Identifier: Apache-2.0

[project]
name = "granite-vision-4.1-4b"
version = "1.0.0"
description = "Dependencies for predict.py"
dependencies = [
     # "vllm==0.21.0" # <== This is built for CUDA 13
     "vllm @ https://github.com/vllm-project/vllm/releases/download/v0.21.0/vllm-0.21.0+cu129-cp38-abi3-manylinux_2_34_x86_64.whl"
]
requires-python = "~= 3.13.0"

# This needs to match the CUDA version in cog.yaml
[tool.uv.pip]
torch-backend = "cu129"
